--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 
 <head>
     <title>HNYA</title>
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <!-- <link rel="shortcut icon" href="img/favicon.ico"> -->
 
     <meta charset="utf-8">
-    <meta name="keywords" content="HNYA, KAMON">
-    <meta name="author" content="Leif Armitage, Ryo Fujimura">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/styles.css">
@@ -20,43 +18,27 @@
 
 <body>
     <header>
-        <a href><h1>HNYA</h1></a>
+        <div id="logo-blank"></div>
+        <div id="logo">
+            <a href><h1>HNYA</h1></a>
+        </div>
+        <nav id="desktop">
+            <a href>HNYA</a>
+            <a href="#collection">COLLECTION</a>
+            <a href="#store">STORE</a>
+            <a href="#about">ABOUT</a>
+        </nav>
+        <div id="nav-trigger">≡</div>
     </header>
 
-    <main></main>
+    <aside id="nav-mobile">
+        <nav id="mobile"></nav>
+    </aside>
 
-    <nav>
-        <div id="links-desktop">
-            <a href class="home">HNYA</a>
-            <a href="#collection" class="collection">Collection</a>
-            <a href="#store" class="store">Store</a>
-            <a href="#about" class="about">About</a>
-        </div>
-        <div id="links-mobile"></div>
-        <div id="links-mobile-trigger"><span>≡</span></div>
-    </nav>
+    <!-- Pages (Content) -->
+    <main id="pages"></main>
 
-    <footer class="desktop">
-        <div class="left-side">
-            <a href="#contact?contact">Contact Us</a>
-            <span>|</span>
-            <a href="#contact?subscribe">Subscribe</a>
-            <span>|</span>
-            <a href="#contact?shipping">Shipping & Return Policy</a>
-            <span>|</span>
-            <a href="#contact?privacy">Privacy Policy</a>
-            <span>|</span>
-            <a href="#contact?terms">Terms & Conditions</a>
-        </div>
-        <div class="social right-side">
-            <a href="https://www.instagram.com/hannya_design/" target="_blank" social="Instagram" title="@hannya_design"></a>
-            <span>|</span>
-            <a social="Facebook" title="You get nothing. Good day, sir."></a>
-            <span>|</span>
-            <a social="YouTube" title="You get nothing. Good day, sir."></a>
-        </div>
-    </footer>
-
+    <!-- Loading -->
     <aside class="loading">
         <figure>
             <span class="hd_1"></span>
@@ -67,9 +49,8 @@
     </aside>
 
     <!-- .js -->
-        <script src="https://www.gstatic.com/firebasejs/5.0.3/firebase.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
