--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href><h1>HNYA</h1></a>
         </div>
         <nav id="desktop">
-            <a href>HNYA</a>
+            <a href>HOME</a>
             <a href="#collection">COLLECTION</a>
             <a href="#store">STORE</a>
             <a href="#about">ABOUT</a>
@@ -36,7 +36,23 @@
     </aside>
 
     <!-- Pages (Content) -->
-    <main id="pages"></main>
+    <main id="pages">
+        <div id="content"></div>
+        <footer id="desktop">
+            <div class="left">
+                <a href="#contact">Contact Us</a>
+                <span class="divider">|</span>
+                <a href="#contact">Subscribe</a>
+                <span class="divider">|</span>
+                <a href="#legal">Shipping & Return Policy</a>
+                <span class="divider">|</span>
+                <a href="#legal">Privacy Policy</a>
+                <span class="divider">|</span>
+                <a href="#legal">Terms & Conditions</a>
+            </div>
+            <div class="right social"></div>
+        </footer>
+    </main>
 
     <!-- Loading -->
     <aside class="loading">
