--- a/pages/about.html
+++ b/pages/about.html
@@ -1,4 +1,41 @@
-<h1>about</h1>
+<div class="section">
+    <h1>What</h1>
+    <p class="sub-section">
+        We are a Cali-based Japanese streetwear brand with inspiration from traditional Japanese aesthetics mixed with a contemporary Bay Area/LA attitude.
+        We’re here to give you streetwear that’s truly one of a kind. One to be jealous of.
+    </p>
+</div>
+
+<div class="section">
+    <h1>Tradition</h1>
+    <p class="sub-section">
+        We find our identity in Japanese folklore and the story of the Hannya—a beautiful women twisted into a <em>kijo</em> (demoness) from betrayal or Jealousy.
+        It is from this story we derive and infuse the dangerous & artistic beauty found in our designs.
+        Displaying the hannya mask, the mask of the kijo often used in traditional <em>Noh</em> plays, is rumored to have the ability to ward off evil but also ties into the buddhist concept of true wisdom.
+    </p>
+    <p class="sub-section">
+        An aesthetic of betrayal, beauty, and jealousy.
+    </p>
+    <p class="sub-section">
+        For more on the Hannya check out the traditional works of: <em>Aoi no Ue</em>, <em>Kurozuka</em>, <em>Dojo-ji</em>.
+    </p>
+</div>
+
+<div class="section">
+    <h1>Who</h1>
+    <p class="sub-section">
+        <img src="img/home/home-5.jpg">
+    </p>
+</div>
+
+<div class="section">
+    <h1>The Team / Special Thanks</h1>
+    <p class="sub-section">
+        <p class="sub-sub-section">Webmaster: <a href="https://nuotsu.github.io/" target="_blank">Mitchell Christ (nuotsu)</a></p>
+        <p class="sub-sub-section">Photo Leads: <a href>Chance Wen</a>, <a href="">Andy Yen</a></p>
+        <p class="sub-sub-section">Logo Design: <a href="" target="_blank">Masako Kamoto</a></p>
+    </p>
+</div>
 
 <script>
     appendFooter()
