--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,4 +1,25 @@
-<h1>contact</h1>
+<div class="section" id="contact-us">
+    <h1>Contact Us</h1>
+    <div class="sub-section">
+        <a href="mailto:hnyadesign@gmail.com">hnyadesign@gmail.com</a>
+    </div>
+    <div class="sub-section">
+        <a href="https://www.instagram.com/hannya_design/" target="_blank">Instagram: @hannya_design</a>
+    </div>
+</div>
+
+<div class="section" id="subscribe">
+    <h1>Subscribe</h1>
+    <h2>For the latest news for upcoming drops</h2>
+    <div class="sub-section">
+        <table><tr>
+            <td><input id="name" type="text" placeholder="Name"></td>
+            <td><input id="email" type="email" placeholder="Email"></td>
+        </tr><tr>
+            <td colspan="2"><input id="submit" type="submit" value="Submit"></td>
+        </tr></table>
+    </div>
+</div>
 
 <script>
     appendFooter()
