--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
     <img src="img/home/home-4.jpg" a-title="STORE" a-link="#store">
     <img src="img/home/home-5.jpg" a-title="ABOUT" a-link="#about">
 </div>
-<div id="content" class="accordion"></div>
+<div class="accordion"></div>
 
 <script>
     // Accordion
