--- a/pages/kamon.html
+++ b/pages/kamon.html
@@ -64,14 +64,14 @@
     </div>
     <div class="sub-section left txt">
         <h1>
-            4. At HNYA, our design and value doesn’t stop at just the product.
-            It extends to our one of a kind packaging as well.
-        </h1>
-        <p>
-            Our commitment to quality, luxury, and tradition spills into our packaging.
+            4. Our commitment to quality, luxury, and tradition spills into our packaging.
             Each package is custom made in the Japanese Furoshiki Style.
             Wrapped in a single large cloth with your bold crest.
             A Furoshiki worth using.
+        </h1>
+        <p>
+            At HNYA, our design and value doesn’t stop at just the product.
+            It extends to our one of a kind packaging as well.
         </p>
     </div>
 </div>
