--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <body>
     <header>
-        <div id="logo-blank"></div>
+        <div id="blank1"></div>
+        <div id="blank2"></div>
         <div id="logo">
             <a href><h1>HNYA</h1></a>
         </div>
@@ -29,6 +30,10 @@
             <a href="#about">ABOUT</a>
         </nav>
         <div id="nav-trigger">≡</div>
+        <a id="cart" href="https://www.paypal.com/cgi-bin/webscr?cmd=_cart&business=LYGQBXWREGFAA&display=1">
+            <img src="img/store/cart.png">
+            <span class="itemQty"></span>
+        </a>
     </header>
 
     <aside id="nav-mobile">
