--- a/pages/about.html
+++ b/pages/about.html
@@ -31,9 +31,23 @@
 <div class="section">
     <h1>The Team / Special Thanks</h1>
     <p class="sub-section">
-        <p class="sub-sub-section">Webmaster: <a href="https://nuotsu.github.io/" target="_blank">Mitchell Christ (nuotsu)</a></p>
-        <p class="sub-sub-section">Photo Leads: <a href>Chance Wen</a>, <a href="">Andy Yen</a></p>
-        <p class="sub-sub-section">Logo Design: <a href="" target="_blank">Masako Kamoto</a></p>
+        <table><tr>
+            <td>Web Design:</td>
+            <td>
+                <a href="https://nuotsu.github.io/" target="_blank">Mitchell Christ (nuotsu)</a>
+            </td>
+        </tr><tr>
+            <td>Photo Leads:</td>
+            <td>
+                <a href>Chance Wen</a>,
+                <a href="">Andy Yen</a>
+            </td>
+        </tr><tr>
+            <td>Logo Design:</td>
+            <td>
+                <a href="" target="_blank">Masako Kamoto</a>
+            </td>
+        </tr></table>
     </p>
 </div>
 
