--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
         <a href="mailto:hnyadesign@gmail.com">hnyadesign@gmail.com</a>
     </div>
     <div class="sub-section">
-        <a href="https://www.instagram.com/hannya_design/" target="_blank">Instagram: @hannya_design</a>
+        <a href="https://www.instagram.com/hnya.vip/" target="_blank">Instagram: @HNYA.vip</a>
     </div>
 </div>
 
