--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <title>HNYA</title>
-    <!-- <link rel="shortcut icon" href="img/favicon.ico"> -->
+    <link rel="shortcut icon" href="img/logo.png">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,6 +37,7 @@
     </header>
 
     <aside id="nav-mobile">
+        <a href><img id="nav-logo" src="img/logo.png"></a>
         <nav id="mobile"></nav>
     </aside>
 
@@ -44,18 +45,22 @@
     <main id="pages">
         <div id="content"></div>
         <footer id="desktop">
-            <div class="left">
-                <a href="#contact">Contact Us</a>
-                <span class="divider">|</span>
-                <a href="#contact">Subscribe</a>
-                <span class="divider">|</span>
-                <a href="#legal">Shipping & Return Policy</a>
-                <span class="divider">|</span>
-                <a href="#legal">Privacy Policy</a>
-                <span class="divider">|</span>
-                <a href="#legal">Terms & Conditions</a>
+            <div id="footer-blank"></div>
+            <div id="footer-links">
+                <div class="left">
+                    <a href="#contact">Contact Us</a>
+                    <span class="divider">|</span>
+                    <a href="#contact">Subscribe</a>
+                    <span class="divider">|</span>
+                    <a href="#legal">Shipping & Return Policy</a>
+                    <span class="divider">|</span>
+                    <a href="#legal">Privacy Policy</a>
+                    <span class="divider">|</span>
+                    <a href="#legal">Terms & Conditions</a>
+                </div>
+                <div class="right social"></div>
             </div>
-            <div class="right social"></div>
+            <a id="footer-right" class="paypal"></a>
         </footer>
     </main>
 
