--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--
+    <!--
     © HNYA Design 2018.
     All Rights Reserved.
 -->
@@ -37,7 +37,9 @@
     </header>
 
     <aside id="nav-mobile">
-        <a href><img id="nav-logo" src="img/logo.png"></a>
+        <a id="nav-logo" href>
+            <img src="img/logo.png">
+        </a>
         <nav id="mobile"></nav>
     </aside>
 
