--- a/pages/hnya.html
+++ b/pages/hnya.html
@@ -1,10 +1,11 @@
 <div class="top"><div class="centerThis">
     <img id="hnya-logo" src="img/collection/hnya-1.jpg">
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Our HNYA-wear is all about balancing aesthetics with tradition.
+        Just like the famous Japanese demoness bent on jealousy we strive to achieve a look that’ll leave people staring.
+        We want to be bold and different.
+        Unique... Like you.
+        But don’t take our word for it; check out our community.
     </p>
     <p>
         <a href="#store"><b>Visit Store.</b></a>
