--- a/pages/store.html
+++ b/pages/store.html
@@ -83,7 +83,7 @@
                         <i class="close-p-i"><i>×</i></i>
                         <p class="p-desc">${$(this).attr('p-desc')}</p>
                         <p class="p-mat">${$(this).attr('p-mat')}</p>
-                        <a href="mailto:" class="addToCart">Email Now!</a>
+                        <a href="mailto:hnyadesign@gmail.com" class="addToCart">Email Now!</a>
                     `)
                     .show()
             // Product Options
