--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
         </tr><tr>
             <td>Logo Design:</td>
             <td>
-                <a href="" target="_blank">Masako Kamoto</a>
+                <a href="http://fadingshoreline.tumblr.com" target="_blank">Masako Kamoto</a>
             </td>
         </tr></table>
     </p>
