--- a/pages/hnya.html
+++ b/pages/hnya.html
@@ -8,7 +8,7 @@
         But don’t take our word for it; check out our community.
     </p>
     <p>
-        <a href="#store"><b>Visit Store.</b></a>
+        <a href="#store">Visit Store</a>
     </p>
 </div></div>
 
