--- a/pages/kamon.html
+++ b/pages/kamon.html
@@ -28,7 +28,7 @@
             Here’s the process:
         </p><br>
         <ol>
-            <li>Pick a base Hoodie color in <em>namanari white</em>, and <em>honnari lack</em></li>
+            <li>Pick a base Hoodie color in <em>namanari white</em>, and <em>honnari black</em></li>
             <li>HNYA Sleeves in <em>namanari white</em>, <em>honnari black</em> or <em>chunari red</em></li>
             <li>Send us your family crest and choose crest color (W/R/B) (Don't have one? Pick one.)</li>
             <li>
