--- a/pages/about.html
+++ b/pages/about.html
@@ -39,8 +39,8 @@
         </tr><tr>
             <td>Photo Leads:</td>
             <td>
-                <a href>Chance Wen</a>,
-                <a href="">Andy Yen</a>
+                <a href="https://www.flickr.com/photos/wenchance/" target="_blank">Chance Wen</a>,
+                <a href="" target="_blank">Andy Yen</a>
             </td>
         </tr><tr>
             <td>Logo Design:</td>
