--- a/pages/about.html
+++ b/pages/about.html
@@ -26,6 +26,10 @@
     <p class="sub-section">
         <img src="img/home/home-5.jpg">
     </p>
+    <h1>Co-founders</h1>
+    <p class="sub-section" style="text-align: center;">
+        Riifu A. &nbsp;&&nbsp; Ryo F.
+    </p>
 </div>
 
 <div class="section">
